[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    tests
    tox.ini

[metadata]
name = pyndv
description = Project create to pyndv manager commandline.
version = 0.1.0
long_description = Get database vunerabilities JSON stream feed from NDV
url = https://github.com/vit0r/pyndv
author = Vitor
author_email = vitornascimentoaraujo@gmail.com
license = MIT
include_package_data = True
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
py_modules = pyndv
zip_safe = False

[files]
packages = pyndv

[nosetests]
nologcapture = 1

[aliases]
test=pytest

[pytest]
addopts = --cov=pyndv --cov-report html --verbose --flake8

[flake8]
max-line-length=120
exclude =
    .git,
    __pycache__,
    docs,
    old,
    build,
    dist