[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    tests
    tox.ini
    docker-compose.yml
    Makefile
    Dockerfile
    .dockerignore
    .gitignore

[metadata]
name=pyndv
long_description=see file README.md
long_description_content_type=text/markdown
description=get database vunerabilities JSON stream feed from NDV
version=1.0.0
url=https://github.com/vit0r/pyndv
author=Vitor
author_email=vitornascimentoaraujo@gmail.com
license_file=LICENSE
include_package_data=True
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
py_modules=pyndv
zip_safe=True

[files]
packages=pyndv

[nosetests]
nologcapture=1

[aliases]
test=pytest

[pytest]
addopts= --cov=pyndv --cov-report html --verbose --flake8

[flake8]
max-line-length=120
exclude=
    .git,
    __pycache__,
    docs,
    old,
    build,
    dist